add the progress bar with emojis

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,8 @@
   <meta name="author" content="Soma, Solbi">
   <!-- <link rel="icon" type="image/png" href=""> -->
   <link rel="stylesheet" href="style.css">
+  <script src="https://kit.fontawesome.com/4277093d13.js" crossorigin="anonymous"></script>
+
   <script src="app.js" defer></script>
 </head>
 
@@ -38,9 +40,14 @@
 
     <section id="result">
       <div class="result__container">
+    
         <div class="progress">
           <div class="progress__inner">
           </div>
+        </div>
+        <div class="result__emoji">
+          <i class="far fa-angry result__angry"></i>
+          <i class="far fa-smile result__happy"></i>
         </div>
       </div>
     </section>
