make the status bar move to the status when loaded

--- a/templates/index.html
+++ b/templates/index.html
@@ -29,8 +29,9 @@
     <!-- Recieve input from the user and post the form -->
     <section id="keywords">
       <div class="keywords__container">
+        <!-- <span class="keywords__ask">Enter a keyword</span> -->
         <form action="/passKeyword/" method="post" class="keywords__form">
-        <span class="keywords__ask">Enter a keyword</span>
+       
         <input type="text" name="content" class="keywords__text">
         <input type="submit" value="Result" class="keywords__button">
       </form>
