--- a/templates/style.css
+++ b/templates/style.css
@@ -16,11 +16,13 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  /* background-color: #F2D271; */
 }
 
 .conatainer {
   max-width: var(--container--width);
   margin: 0 auto;
+
 }
 
 /* header */
@@ -52,15 +54,19 @@
 }
 
 .keywords__text {
-  padding: 1rem 2rem;
-  font-size: 1.2rem;
+  padding: 1rem 1rem;
+  font-size: 1.4rem;
+  font-family: var(--font-body-stack);
 }
 .keywords__button {
   padding: 1rem 2rem;
-  font-size: 1.2rem;
+  font-size: 1.4rem;
   text-transform: uppercase;
   /* transition: 0.3s all ease; */
   font-weight: bold;
+  font-family: var(--font-body-stack);
+  letter-spacing: 0.9px;
+
 }
 
 .progress {
