--- a/templates/style.css
+++ b/templates/style.css
@@ -57,6 +57,7 @@
   padding: 1rem 1rem;
   font-size: 1.4rem;
   font-family: var(--font-body-stack);
+  text-align: center;
 }
 .keywords__button {
   padding: 1rem 2rem;
