--- a/templates/index.html
+++ b/templates/index.html
@@ -88,10 +88,6 @@
         </div>
         {% endif %}
 
-
- 
-
-
         <div class="accordion">
         <div class="accordion__item">
           <div class="accordion__heading">
@@ -99,7 +95,7 @@
             <span class="accordion__icon">+</span>
           </div>
           <div class="accordion__details">
-            <p>list of tweets</p>
+            <p>{{first_item.positive_tweets}}</p>
           </div>
         </div>
         <div class="accordion__item">
@@ -108,7 +104,7 @@
             <span class="accordion__icon">+</span>
           </div>
           <div class="accordion__details">
-            <p>list of tweets</p>
+            <p>{{first_item.negative_tweets}}</p>
           </div>
         </div>
         <div class="accordion__item">
